# scientia

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
Formula/: scientia.rb
src/: config.py  database_manager.py  device_setup.py  embedding.py  integrate_ideas.py  interface.py  main.py  universal_encoder.py
src/research/: hf_data_sets.py  nous.py  vector_storage.py
src/scientia/: __init__.py  cli.py
src/scientia/core/: __init__.py  knowledge_system.py  models.py  vector_store.py
