[project]
name = "scientia"
version = "0.1.0"
description = "An AI-powered knowledge exploration and management system"
authors = [
    {name = "David Irvine", email = "your.email@example.com"}
]
dependencies = [
    "transformers[torch]>=4.36.0",
    "torch>=2.1.0",
    "accelerate>=0.25.0",
    "sentence-transformers>=2.2.2",
    "PyMuPDF>=1.23.8",
    "python-docx>=1.0.1",
    "Pillow>=10.1.0",
    "pytesseract>=0.3.10",
    "streamlit>=1.29.0",
    "protobuf<=3.20.0",  # Fixed version to avoid conflicts with ChromaDB
    "chromadb>=0.4.18",
    "pydantic>=2.0.0",
    "watchdog>=3.0.0",
    "tqdm>=4.66.1",
    "numpy>=1.24.0",
    "aiohttp>=3.9.1",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/scientia"
Documentation = "https://github.com/yourusername/scientia#readme"
Repository = "https://github.com/yourusername/scientia.git"
